src/test/ui/error-codes/E0062.stderr
error[E0062]: field `x` specified more than once
  --> $DIR/E0062.rs:18:9
   |
17 |         x: 0,
   |         ---- first use of `x`
18 |         x: 0,
   |         ^ used more than once

error: aborting due to previous error

